fix alignment of footer content add copyright text add hover effect to footer social icons add chevron to home page

--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -28,3 +28,18 @@
     transform: rotate(-45deg);
   }
 }
+
+.fa {
+  font-size: 20px !important;
+  color: #fff;
+
+  &.fa-chevron-down {
+    color: $c-pink-dark;
+  }
+
+  @include breakpoint(sm) {
+    font-size: 24px !important;
+  }
+}
+
+
